unpackaged/main/default/objects/Aprobacion_Cuentas__c/Aprobacion_Cuentas__c.object-meta.xml
<CustomObject>
    <label>Aprobacion de Cuenta</label>
    <nameField>
        <displayFormat>ACU-{000000}</displayFormat>
        <label>Aprobacion Cuentas Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Aprobaciones de Cuenta</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>