unpackaged/main/default/objects/Aprobacion_Cuentas__c/fields/Apellido_Materno__c.field-meta.xml
<CustomField>
    <fullName>Apellido_Materno__c</fullName>
    <formula>Cuenta__r.Apellidomaterno_cta__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Apellido Materno</label>
    <type>Text</type>
</CustomField>