unpackaged/main/default/objects/Aprobacion_Cuentas__c/fields/Apellido_Paterno__c.field-meta.xml
<CustomField>
    <fullName>Apellido_Paterno__c</fullName>
    <formula>Cuenta__r.Apellidopaterno_cta__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Apellido Paterno</label>
    <type>Text</type>
</CustomField>