unpackaged/main/default/objects/Aprobacion_Cuentas__c/fields/Aprobacion_Check_Apellido__c.field-meta.xml
<CustomField>
    <fullName>Aprobacion_Check_Apellido__c</fullName>
    <formula>Cuenta__r.Aprobo_Check_Apellido__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Aprobación Check Apellido</label>
    <type>Checkbox</type>
</CustomField>