unpackaged/main/default/objects/Aprobacion_Cuentas__c/fields/Check_Apellido_Materno__c.field-meta.xml
<CustomField>
    <fullName>Check_Apellido_Materno__c</fullName>
    <formula>Cuenta__r.Check_Apellido__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check Apellido Materno</label>
    <type>Checkbox</type>
</CustomField>