unpackaged/main/default/objects/Aprobacion_Cuentas__c/fields/Cuenta__c.field-meta.xml
<CustomField>
    <fullName>Cuenta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cuenta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Aprobaciones de Cuenta</relationshipLabel>
    <relationshipName>Aprobaciones_de_Cuenta</relationshipName>
    <type>Lookup</type>
</CustomField>