unpackaged/main/default/objects/Aprobacion_Cuentas__c/fields/Debugg2__c.field-meta.xml
<CustomField>
    <fullName>Debugg2__c</fullName>
    <label>Debugg2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>