unpackaged/main/default/objects/Aprobacion_Cuentas__c/fields/Estatus_Aprbacion__c.field-meta.xml
<CustomField>
    <fullName>Estatus_Aprbacion__c</fullName>
    <label>Estatus Aprbación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nuevo</fullName>
            </value>
            <value>
                <fullName>Aprobación en Proceso</fullName>
                <default>true</default>
                <label>Aprobación en Proceso</label>
            </value>
            <value>
                <fullName>Formalizador</fullName>
            </value>
            <value>
                <fullName>Aprobado</fullName>
            </value>
            <value>
                <fullName>Rechazado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>