unpackaged/main/default/objects/Aprobacion_Cuentas__c/fields/Fraccionamiento__c.field-meta.xml
<CustomField>
    <fullName>Fraccionamiento__c</fullName>
    <formula>Cuenta__r.Fraccionamiento_cta__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fraccionamiento</label>
    <type>Text</type>
</CustomField>