unpackaged/main/default/objects/Aprobacion_Cuentas__c/fields/Nombre_del_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Nombre_del_Cliente__c</fullName>
    <formula>Cuenta__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre del Cliente</label>
    <type>Text</type>
</CustomField>