unpackaged/main/default/objects/Aprobacion_Cuentas__c/fields/Prototipo__c.field-meta.xml
<CustomField>
    <fullName>Prototipo__c</fullName>
    <formula>Cuenta__r.Prototipo_lookup__r.Nombre_Prototipo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prototipo</label>
    <type>Text</type>
</CustomField>