unpackaged/main/default/objects/Aprobacion_Cuentas__c/fields/Tipo_de_Registro__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Registro__c</fullName>
    <formula>Cuenta__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tipo de Registro</label>
    <type>Text</type>
</CustomField>