unpackaged/main/default/objects/Aprobacion_Cuentas__c/fields/UEN_APROBACIONES__c.field-meta.xml
<CustomField>
    <fullName>UEN_APROBACIONES__c</fullName>
    <formula>Cuenta__r.Fraccionamiento_cta__r.Plaza_Relacionada__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UEN APROBACIONES</label>
    <type>Text</type>
</CustomField>