unpackaged/main/default/objects/Aprobacion_Cuentas__c/fields/UEN_SUB_APROBACIONES__c.field-meta.xml
<CustomField>
    <fullName>UEN_SUB_APROBACIONES__c</fullName>
    <formula>Cuenta__r.Fraccionamiento_cta__r.UEN_Sub_Aprobaciones__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UEN SUB APROBACIONES</label>
    <type>Text</type>
</CustomField>