unpackaged/main/default/objects/Aprobacion_Cuentas__c/listViews/Jefe_de_Formalizaci_n_GLD_Aprobacion_Cuentas.listView-meta.xml
<ListView>
    <fullName>Jefe_de_Formalizaci_n_GLD_Aprobacion_Cuentas</fullName>
    <filterScope>Queue</filterScope>
    <label>Jefe de Formalización GLD</label>
    <queue>Jefe_de_Formalizaci_n_GLD</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>