unpackaged/main/default/objects/Aprobacion_Cuentas__c/listViews/Jefe_de_Formalizacion_NL_1_Aprobacion_Cuentas.listView-meta.xml
<ListView>
    <fullName>Jefe_de_Formalizacion_NL_1_Aprobacion_Cuentas</fullName>
    <filterScope>Queue</filterScope>
    <label>Jefe de Formalización NL 1</label>
    <queue>Jefe_de_Formalizacion_NL_1</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>